--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
       <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
-           <version>4.0.4</version>
+           <version>4.0.6</version>
+       </dependency>
+       <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-stream</artifactId>
+           <version>4.0.6</version>
        </dependency>
    </dependencies>
 </project>
