--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ fabric.properties
 # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
 .idea/
+target/
 
 ### NetBeans ###
 nbproject/private/
