--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ nbdist/
 .nb-gradle/
 
 # End of https://www.gitignore.io/api/netbeans,code-java,intellij+all
+/src/main/java/com/dita/dev/twitterbot/Utils/credentials.properties
