--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-/src/main/java/com/dita/dev/twitterbot/Utils/credentials.properties
+/src/main/java/resources/credentials.properties
+/credentials.properties
 
 # End of https://www.gitignore.io/api/netbeans,code-java,intellij+all
